# spc-converter

./: Cargo.toml  README.md  THIRD_PARTY_LICENSES.md  spc.md
.github/workflows/: build.yml
src/: lib.rs  main.rs
src/output/: csv.rs  json.rs  mod.rs  pairs.rs  plot.rs
src/parser/: container.rs  header.rs  mod.rs  object.rs
src/spectre/: file.rs  mod.rs  spc_file.rs
