[package]
name = "spc_converter"
version = "0.1.3"
edition = "2021"
description = "Convert Spectrum Analyzer Suite .spc files to JSON/CSV"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
plotters = "0.3"
